# SurfaceMaker

./: CMakeLists.txt  DrT.h  SurfaceMaker.h  amlVec.h  main.cpp
exampleCurves/: block.curve  bunny.curve  cup.curve
